--- a/owasp-angular/index.html
+++ b/owasp-angular/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html ng-app="devoxxApp" lang="en">
 <head>
+    <!-- CSP -->
+    <!--<meta http-equiv="Content-Security-Policy" content="script-src 'self'">-->
+
     <!-- base href="/" -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
